--- a/sass/style.scss
+++ b/sass/style.scss
@@ -199,14 +199,15 @@ header#header2{
 
 form.buscador{
     background-color: $light;
-    padding: 4px;
+    padding: 0px 100px;
     border: 2px solid lightgrey;
-    border-radius: 25px;
+    border-radius: 10px;
+    font-family: $tipo;
 }
 .icon-search:before {
     content: "\e986";
     display: inline-block;
-  
+    flex-direction: start;
 }
 
 div.icon-search input{
@@ -244,7 +245,7 @@ section#intercambio{
     h3{
         color: $dark;
         font-size: 1.4rem;
-        font-weight: 500;
+        font-weight:750;
         margin-bottom: 20px;
     }
     .dropdown{
@@ -301,6 +302,10 @@ section#intercambio{
         display: block;
         padding: 25px 95px;
     }
+}
+
+section#login{
+    
 }
 
 /*Footer*/
