--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,31 @@ section#contacto input, section#contacto select { padding: 30px; }
 section#contacto button[type="submit"] { margin-top: 40px; padding: 20px 40px; }
 
 /* Navegacion lateral de categorias */
-section#categorias { background-color: #EEF6FF; /*Seccion destacados*/ /*Fin destacados*/ }
-section#categorias ul { background: #A2CFFF; width: 100%; padding: 20px; height: 600px; }
-section#categorias #nav-left p { font-size: 1.15rem; text-align: center; background: #32577F; padding: 10px; color: #EEF6FF; font-weight: 600; text-transform: uppercase; }
-section#categorias h3 { text-transform: uppercase; color: #32577F; font-weight: 400; }
-section#categorias h3 span { font-weight: 600; }
-section#categorias h3:after { width: 50px; height: 3px; background-color: #777B7F; margin-top: 10px; margin-bottom: 20px; content: ""; display: block; }
+section#categorias { background-color: #EEF6FF; }
+section#categorias ul { background: #fff; border-radius: 4px; width: 100%; padding: 20px; height: 700px; box-shadow: 6px 0 10px rgba(0, 0, 0, 0.089), 0px 0px 0px rgba(0, 0, 0, 0.22); }
+section#categorias ul li { margin: 25px 20px; }
+section#categorias ul li a { color: #32577F !important; font-size: 1.2rem; }
+section#categorias ul li img { margin-right: 20px; }
+section#categorias #nav-left p { font-size: 1.15rem; text-align: center; background: #32577F; padding: 5px; color: #EEF6FF; font-weight: 600; text-transform: uppercase; }
+
+/*Seccion destacados*/
+section#destacados h3 { text-transform: uppercase; color: #32577F; font-weight: 400; }
+section#destacados h3:nth-child(1) { margin-top: 30px; }
+section#destacados h3 span { font-weight: 600; }
+section#destacados h3:after { width: 50px; height: 3px; background-color: #777B7F; margin-top: 10px; margin-bottom: 20px; content: ""; display: block; }
+section#destacados img { border: 2px #fff solid; border-radius: 4px; transition: 0.2s all; }
+section#destacados img:hover { filter: blur(3px); }
+
+/*Fin destacados*/
+/*Seccion perfil*/
+section#perfil { background-color: #EEF6FF; }
+section#perfil .menu { height: 100%; width: 200px; background-color: #EEF6FF; overflow-x: hidden; padding-top: 20px; }
+section#perfil .menu h4 { background-color: #A2CFFF; text-transform: uppercase; color: #32577F; font-size: 1.3rem; font-weight: 600; padding: 9px 8px 9px 16px; border-radius: 4px; }
+section#perfil .menu .enlaces { background-color: #fff; margin-top: -7px; }
+section#perfil .menu a { padding: 7px 12px 7px 17px; text-decoration: none; font-size: 1.1rem; color: #32577F; display: block; }
+section#perfil .menu a:hover { color: #A2CFFF; }
+section#perfil h3 { text-transform: uppercase; color: #32577F; font-weight: 400; margin-top: 20px; }
+section#perfil h3:after { width: 50px; height: 3px; background-color: #777B7F; margin-top: 10px; margin-bottom: 20px; content: ""; display: block; }
 
 /*Seccion pagina de servicio*/
 section#servicio { background: #EEF6FF; }
@@ -58,7 +77,7 @@ section#servicio #descripcion .user { color: #32577F; font-weight: 600; font-siz
 section#servicio #descripcion ul { color: #777B7F; }
 
 /*Pagina de busqueda de servicio*/
-div#busqueda .item_busqueda { padding: 3px 10px; margin: 20px; background-color: white; border-radius: 4px; box-shadow: 0 0px 1px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24); }
+div#busqueda .item_busqueda { padding: 3px 10px; margin: 20px; background-color: white; border-radius: 3px; box-shadow: 0 0px 1px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24); }
 div#busqueda .item_busqueda img { border: 2px solid #EEF6FF; }
 div#busqueda .item_busqueda h4 { color: #32577F; font-weight: 600; }
 div#busqueda .item_busqueda p { color: #777B7F; }
