--- a/sass/style.scss
+++ b/sass/style.scss
@@ -253,7 +253,57 @@ section#perfil{
             content: "";
             display: block;
         }
-    } 
+    }
+
+    .profile{
+        margin-bottom: 50px;
+        .fondo-profile{
+            width: 100%;
+            min-height: 200px;
+            border-radius: 4px;
+            background: url(http://placehold.it/1200x200) center center no-repeat / cover;
+            @include flexible(null, null);
+            img{
+                margin-bottom: -195px;
+                border: 3px solid $primary;
+                border-radius: 35px;
+            }
+        }
+        .datos{
+            margin-top: 6px;
+            background-color: $primary;
+            border-radius: 4px;
+            min-height: 200px;
+            @include flexible(space-around, center);
+            h5{
+                color: $dark;
+                text-transform: uppercase;
+                font-size: 1.1rem;
+                font-weight: bold;
+            }
+            .separadores{
+                border-left: 1px solid $light;
+                border-right: 1px solid $light;
+            }
+            p{
+                font-size: 2rem;
+                color: $light;
+                font-weight: bolder;
+            }
+        }
+        .servicios{
+            margin-top: 6px;
+            background-color: $primary;
+            border-radius: 4px;
+            min-height: 180px;
+            padding: 20px;
+            @include flexible(space-around, center);
+            img{
+                border: 3px $light solid;
+                border-radius: 4px;
+            }
+        }
+    }
 
 }
 
